[package]
name = "rust"
version = "0.1.0"
authors = ["Florian Fromm <flrn.frmm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
crossbeam-channel = "0.5.0"
rocket = "0.4.6"
anyhow = "1.0.36"